/*
 * $Id: ChangeLog,v 1.6629 2009/10/23 10:05:20 modalsist Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2009-10-28 15:28 UTC-0800 Augusto Infante <augusto.infante@xharbour.com>
  * contrib\rdd_ads\adsfunc.c
    + Added wrapper to AdsIsConnectionAlive
      lAlive := AdsIsConnectionAlive( hConnection )

2009-10-23 06:50 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * source/rtl/tbrowse.prg
    ! fixed Initkeys(), HitTest() methods and Tbmouse() function to work properly with mouse
    events. 

    ps: it seems threre is a bug
 with mouse wheel on console window, that is changing MCol()
    MRow() values, so if you use mouse wheel to change tbrowse rows, the behaviour can be unexpected.
 
  

2009-10-22 21:00 UTC-0300 Luiz Rafael Culik <luiz at xharbour.com.br>
  * source/rtl/filenet.c
    ! added missing #include for htons under linux
  * source/rtl/diskphb.c
      ! typecast to hb_fsNameConv
  * source/rtl/ftemp.c
     ! added typecast to fsGetTempDirByCase
  * source/rtl/isprint.c
     ! fixed type cast to hb_fsOpen

2009-10-22 18:30 UTC+0200 Enrico Maria Giordano <e.m.giordano@emagsoftware.it>
  * include\std.ch
    * Added support for extended expression in command SET ERRORLOG TO

2009-10-21 17:32 UTC+0100 Miguel Angel Marchuet <miguelangel@marchuet.net>
  * source/vm/arrayshb.c
    * 2nd parameter of ADEL function can be now negative referente position to array.

2009-10-20 12:00 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * source/rtl/pcre/config.h
  * source/rtl/pcre/config.h.generic
  * source/rtl/pcre/pcre.h.generic
  * source/rtl/pcre/pcreposix.c
  * source/rtl/pcre/pcreposix.h
  * source/rtl/pcre/pcre_chartables.c.dist
  * source/rtl/pcre/pcre_compile.c
  * source/rtl/pcre/pcre_config.c
  * source/rtl/pcre/pcre_dfa_exec.c
  * source/rtl/pcre/pcre_exec.c